# sharp-star

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: linting.yaml  tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: 01-fetch-dataset.ipynb  02-process-images.ipynb  03-pack-data.ipynb  03-split-data.ipynb
src/sharp_star/: data.py  denormalize.py  evaluate.py  model.py  predict.py  train.py  utils.py  visualize.py
tests/: __init__.py  test_data.py  test_inference.py  test_model.py
