[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp_star"
version = "0.0.1"
description = "Sharp Star is a neural model that sharpens your astro images."
authors = [{ name = "Aris Christoforidis", email = "your@email.com" }]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "sharp_star.train:main"
evaluate = "sharp_star.evaluate:main"
